@@ -7,6 +7,7 @@ Diakonos Changelog
 - Fixed -m switch (open matching files).
 - Fixed breakage of grepping through all buffers when some buffers are unnamed.
 - Fixed bug that prevented type_character from working in macros.
+- Fixed open_file bug caused by empty input.
 - Fixed several display bugs.
 
 0.9.0
